# clang_copy_finder

./: CMakeLists.txt  build.sh
src/: CMakeLists.txt  ConstructorHandler.h  copyFinder.cpp
test_program/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json  main.cpp  test-program
